src/test/resources/semantic/error/TC_ERROR_NO_CONSTRUCTOR.ru
/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 6 | COLUMNA 8 | Struct A no tiene constructor implementado |
/? todo struct en su impl debe tener un constructor

struct A{

}

impl A{
    fn m1()->void{

    }
}

start{
    
}